added required params and icons
